@startuml UML-TO-BE-03-Carga-Adaptadores
!pragma layout smetana
title UML TO-BE 03 — Carga TXT, contratos y creación de productos

left to right direction
skinparam backgroundColor white
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 36
skinparam ranksep 50
skinparam dpi 180
skinparam defaultFontSize 11

package "BibFarmacia.Interfaces" {
  interface ICargadorProductos <<ADR-002, DIP, ISP>> #F5B7B1 {
    + Cargar(ruta: string, destino: ICollection<Producto>): string
  }
  interface ICargadorClientes <<ADR-002, DIP, ISP>> #F5B7B1 {
    + Cargar(ruta: string, destino: ICollection<Cliente>): string
  }
  interface ICargadorUsuarios <<ADR-002, DIP, ISP>> #F5B7B1 {
    + Cargar(ruta: string, destino: ICollection<Usuario>): string
  }
  interface ICreadorProducto <<ADR-003>> #D5F5E3 {
    + Crear(datos: DatosProducto): Producto
  }
}

package "BibFarmacia.Servicios" {
  class CargadorProductosTxt <<ADR-002/003>> #F5B7B1 {
    - creador: ICreadorProducto {solo lectura}
    + CargadorProductosTxt(creador: ICreadorProducto)
    + Cargar(ruta: string, destino: ICollection<Producto>): string
  }
  class CargadorClientesTxt <<ADR-002>> #F5B7B1 {
    + CargadorClientesTxt() <<implícito>>
    + Cargar(ruta: string, destino: ICollection<Cliente>): string
  }
  class CargadorUsuariosTxt <<ADR-002>> #F5B7B1 {
    + CargadorUsuariosTxt() <<implícito>>
    + Cargar(ruta: string, destino: ICollection<Usuario>): string
  }

  class ServicioProducto <<ADR-002, resumen UML-02>> #F5B7B1 {
    - productos: List<Producto> {solo lectura}
    - cargador: ICargadorProductos {solo lectura}
    + ServicioProducto(cargador: ICargadorProductos)
    + AgregarProducto(producto: Producto): string
    + ObtenerProductos(): List<Producto>
    + CargarDesdeArchivo(ruta: string): string
  }
  class ServicioCliente <<ADR-002, resumen UML-02>> #F5B7B1 {
    - clientes: List<Cliente>
    - cargador: ICargadorClientes {solo lectura}
    + ServicioCliente(cargador: ICargadorClientes)
    + AgregarCliente(cliente: Cliente): void
    + ObtenerClientes(): List<Cliente>
    + Cargar(ruta: string): string
  }
  class ServicioUsuario <<ADR-002, resumen UML-02>> #F5B7B1 {
    - usuarios: List<Usuario>
    - cargador: ICargadorUsuarios {solo lectura}
    + ServicioUsuario(cargador: ICargadorUsuarios)
    + AgregarUsuario(usuario: Usuario): void
    + Login(user: string, password: string): bool
    + Cargar(ruta: string): string
  }
}

package "BibFarmacia.Clases" {
  class DatosProducto <<inmutable, ADR-003>> #D5F5E3 {
    + Nombre: string { get; }
    + Precio: decimal { get; }
    + Stock: int { get; }
    + StockMinimo: int { get; }
    + FechaVencimiento: DateTime { get; }
    + NombreLaboratorio: string { get; }
    + DatosProducto(nombre: string, precio: decimal, stock: int,\n  stockMinimo: int, fechaVencimiento: DateTime,\n  nombreLaboratorio: string)
  }
  abstract class Producto <<conservada>> #E5E7EB
  class Cliente <<conservada>> #E5E7EB
  class Usuario <<conservada>> #E5E7EB
  class MedicamentoCapsula <<conservada>> #E5E7EB
  class Laboratorio <<conservada>> #E5E7EB
}

package "BibFarmacia.Factories" {
  class CreadorMedicamentoCapsula <<ADR-003>> #D5F5E3 {
    + CreadorMedicamentoCapsula() <<implícito>>
    + Crear(datos: DatosProducto): Producto
  }
  class ProductoFactory <<conservada>> #E5E7EB {
    + {static} CrearCapsula(nombre: string, precio: decimal, stock: int,\n  laboratorio: Laboratorio): MedicamentoCapsula
    + {static} CrearLiquido(nombre: string, precio: decimal, stock: int,\n  laboratorio: Laboratorio): MedicamentoLiquido
  }
}

package "Espacio de nombres global" {
  class Program <<composition root>> #D6EAF8
}

CargadorProductosTxt ..|> ICargadorProductos
CargadorClientesTxt ..|> ICargadorClientes
CargadorUsuariosTxt ..|> ICargadorUsuarios
CreadorMedicamentoCapsula ..|> ICreadorProducto

ServicioProducto --> "1" ICargadorProductos : <<inyecta>>
ServicioCliente --> "1" ICargadorClientes : <<inyecta>>
ServicioUsuario --> "1" ICargadorUsuarios : <<inyecta>>
CargadorProductosTxt --> "1" ICreadorProducto : <<inyecta>>

ServicioProducto --> "0..*" Producto : <<destino en memoria>>
ServicioCliente --> "0..*" Cliente : <<destino en memoria>>
ServicioUsuario --> "0..*" Usuario : <<destino en memoria>>
CargadorProductosTxt ..> DatosProducto : <<crea por fila>>
CargadorClientesTxt ..> Cliente : <<crea por fila>>
CargadorUsuariosTxt ..> Usuario : <<crea por fila>>
CreadorMedicamentoCapsula ..> DatosProducto : <<usa>>
CreadorMedicamentoCapsula ..> MedicamentoCapsula : <<crea>>
CreadorMedicamentoCapsula ..> Laboratorio : <<crea>>

Program ..> CreadorMedicamentoCapsula : <<crea>>
Program ..> CargadorProductosTxt : <<crea>>
Program ..> CargadorClientesTxt : <<crea>>
Program ..> CargadorUsuariosTxt : <<crea>>
Program ..> ServicioProducto : <<inyecta contrato>>
Program ..> ServicioCliente : <<inyecta contrato>>
Program ..> ServicioUsuario : <<inyecta contrato>>

note right of Program
  Program actúa como Composition Root:
  crea implementaciones concretas y conecta las dependencias.
end note

ProductoFactory ..> MedicamentoCapsula : <<crea>>
ProductoFactory ..> Laboratorio : <<usa>>

note bottom of CargadorProductosTxt
  Conserva File, delimitador, columnas, conversiones,
  mensajes, orden, duplicados y carga parcial previa a una falla.
  Delega exclusivamente la construcción del Producto.
end note

note bottom of ProductoFactory
  Tipo AS-IS conservado.
  No participa en el flujo ADR-003 porque recalcula
  stock mínimo y fecha de vencimiento.
end note

legend bottom
  |= Color |= Significado |
  | <back:#E5E7EB>Gris</back> | Tipo AS-IS conservado |
  | <back:#D6EAF8>Azul</back> | SRP / composition root |
  | <back:#D5F5E3>Verde</back> | OCP: contrato, datos y creador |
  | <back:#FAD7A0>Naranja</back> | LSP: reservado para nota UML-04 |
  | <back:#E8DAEF>Morado</back> | ISP cuando sea la motivación principal |
  | <back:#F5B7B1>Rojo</back> | DIP principal; ISP aparece como estereotipo secundario |
  ICollection<T> es destino proporcionado por el servicio; no implica propiedad del adaptador.
  Asociaciones 1 son dependencias retenidas por constructor; 0..* son listas en memoria.
endlegend

@enduml
